# bluetooth-manager

./: BluetoothManager.podspec  CMakeLists.txt  build.sh  compile_commands.json  module.modulemap
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/org/BluetoothManager/: BluetoothManagerJava.java  BluetoothManagerKotlin.kt  Callback.java  Callback.kt  DeviceOperationCallback.java  StatusCode.kt
cpp/: main.cpp
cpp/include/BluetoothManager/: BluetoothManager.hpp  structs.hpp
cpp/include/BluetoothManager/device/: BluetoothDevice.hpp  BluetoothDeviceBase.hpp  Device.hpp
cpp/include/BluetoothManager/interfaces/: IBluetoothDevice.hpp  IBluetoothManager.hpp
cpp/src/: BluetoothManager.cpp
cpp/src/device/: BluetoothDevice.cpp  Device.cpp
ios/: BluetoothManager.swift
